--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           node-version: '20'
       - run: npm install
-      - run: nom run build --prefix clients
+      - run: npm run build --prefix clients
