--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "arwes": "^1.0.0-alpha.23",
+    "arwes": "^1.0.0-alpha.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.4",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "BUILD_PATH=../server/public react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
