--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,13 @@
     "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
     "start": "node src/server.js",
-    "cluster": "pm2 start src/server.js -i max"
+    "cluster": "pm2 start src/server.js -i max",
+    "tsc": "tsc",
+    "jest": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "jest": {
-    "testEnvironment": "node"
-  },
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.5.0",
@@ -23,8 +22,23 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.2",
+    "@types/supertest": "^2.0.14",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0",
+    "ts-standard": "^12.0.2"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "project": "tsconfig.json"
+    },
+    "extends": [
+      "./node_modules/ts-standard/eslintrc.json"
+    ]
   }
 }
